Bug 167361 - [26.2] Highlighting the text of the object may not be reflected in the display
Summary: [26.2] Highlighting the text of the object may not be reflected in the display
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-07-03 07:11 UTC by nobu
Modified: 2025-07-10 17:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample gif (504.81 KB, image/gif)
2025-07-03 07:14 UTC, nobu
Details
sample file (8.23 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-07-03 07:16 UTC, nobu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-07-03 07:11:59 UTC
Description:
Highlighting the text of the object may not be reflected in the display.

Steps to Reproduce:
1. Open new Calc.
2. Insert TEXTBOX on sheet. (not control)
3. Insert text "RED GREEN BLUE" in the TEXTBOX.
4. Select text each color name , and set each Charactor highlighting color.
5. Click in any cell to end the edit.

Actual Results:
6.  Some highlight colors have disappeared and the font color seems to have changed.

Expected Results:
6.  It will be displayed in the color scheme you entered.


Reproducible: Always


User Profile Reset: No

Additional Info:

7. When you try to edit the text, the highlight color comes back, but when you finish editing, the highlight color disappears again.
8. When you open the document again after saving it, it looks pretty bad, but it returns to the original state of the problem by double-clicking.

It seems that which highlight color is lost depends on the usage of each past application.

I explained the bug in the TEXTBOX, but there are similar problems in COMMENT and SHAPEs.

Not reproduced with
[2025-06-27]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 04bd455e36b054001e08a0a3256d508a009ffef3
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible with
[2025-07-03]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bfa28a257ae621747dddbb61f228705cf46079b8
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 nobu 2025-07-03 07:14:42 UTC
Created attachment 201625 [details]
sample gif
Comment 2 nobu 2025-07-03 07:16:39 UTC
Created attachment 201626 [details]
sample file

In the sample file, you placed comments, text boxes, and shapes, but the comments may have disappeared, as in a previously reported bug.
Comment 3 V Stuart Foote 2025-07-03 17:32:07 UTC
Confirmed.

Getting a weird transparency change in the background fill color applied to text span of sd Text boxes.

When the text is selected editable, it takes its bg fill color without issue. But once the sd textbox is unselected, it loses its fill color.

Any chance this was from https://gerrit.libreoffice.org/c/core/+/187290 done for bug 166339; looks to be in the affected build. Or maybe on Noel's COL_TRANSPARENT alpha WIP?

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bfa28a257ae621747dddbb61f228705cf46079b8
CPU threads: 28; OS: Windows 11 X86_64 (build 26100); UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Saburo 2025-07-10 01:07:59 UTC
commit 1994fb2b3018867ba5d0d5134a7d5998a25658c6
author	Noel Grandin

tdf#166842 do not use FillColor==COL_TRANSPARENT...
Comment 5 Commit Notification 2025-07-10 17:29:22 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/222878ec84e6be016cea53cd3e8cd59c130f2b8f

tdf#167361 tdf#167363 tdf#167384 Highlighting and transparency fail

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.