tdf#167361 tdf#167363 tdf#167384 Highlighting and transparency fail

Revert
    commit 1994fb2b3018867ba5d0d5134a7d5998a25658c6.
    tdf#166842 do not use FillColor==COL_TRANSPARENT...

as it causes this

Change-Id: I3058fec2d9bee423c6d4f0af2ef9f7d14ecea612
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187639
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>