svx/source/svdraw/sdrpaintwindow.cxx
@@ -115,7 +115,7 @@ void CandidateMgr::PaintTransparentChildren(vcl::Window const & rWindow, tools::
 
 SdrPreRenderDevice::SdrPreRenderDevice(OutputDevice& rOriginal)
 :   mpOutputDevice(&rOriginal),
-    mpPreRenderDevice(VclPtr<VirtualDevice>::Create(DeviceFormat::WITH_ALPHA))
+    mpPreRenderDevice(VclPtr<VirtualDevice>::Create())
 {
 }
 
